[gd_scene load_steps=16 format=3 uid="uid://b1fricmhq2rje"]

[ext_resource type="Script" path="res://Scripts/Bird/Navigation/navigation_data.gd" id="1_vftuf"]
[ext_resource type="Script" path="res://Scripts/Behaviour Tree/Composite/sequence.gd" id="2_a4ouu"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/calculate_distance.gd" id="3_e24xc"]
[ext_resource type="Script" path="res://Scripts/Behaviour Tree/Composite/selector.gd" id="4_odi5h"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/check_if_moving_on_ground.gd" id="5_h5rat"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/check_ground_type.gd" id="6_3qoab"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/check_if_walking.gd" id="7_6fsov"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/walk.gd" id="8_ecqlb"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/check_if_swimming.gd" id="9_2u1we"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/swim.gd" id="10_3744t"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/check_if_flying.gd" id="11_64j4j"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/fly.gd" id="12_yyq6m"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/move.gd" id="13_8b7lm"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/check_if_reached_target.gd" id="14_xpql5"]
[ext_resource type="Script" path="res://Scripts/Bird/Navigation/stop.gd" id="15_l7lnx"]

[node name="NavigationData" type="Node" node_paths=PackedStringArray("calulate_distance")]
script = ExtResource("1_vftuf")
calulate_distance = NodePath("NavigationSequence/CalculateDistance")

[node name="NavigationSequence" type="Node" parent="."]
script = ExtResource("2_a4ouu")

[node name="CalculateDistance" type="Node" parent="NavigationSequence"]
unique_name_in_owner = true
script = ExtResource("3_e24xc")

[node name="MovementSelector" type="Node" parent="NavigationSequence"]
script = ExtResource("4_odi5h")

[node name="GroundSequence" type="Node" parent="NavigationSequence/MovementSelector"]
script = ExtResource("2_a4ouu")

[node name="CheckIfMovingOnGround" type="Node" parent="NavigationSequence/MovementSelector/GroundSequence"]
script = ExtResource("5_h5rat")

[node name="CheckGroundType" type="Node" parent="NavigationSequence/MovementSelector/GroundSequence"]
script = ExtResource("6_3qoab")

[node name="GroundSelector" type="Node" parent="NavigationSequence/MovementSelector/GroundSequence"]
script = ExtResource("4_odi5h")

[node name="WalkingSequence" type="Node" parent="NavigationSequence/MovementSelector/GroundSequence/GroundSelector"]
script = ExtResource("2_a4ouu")

[node name="CheckIfWalking" type="Node" parent="NavigationSequence/MovementSelector/GroundSequence/GroundSelector/WalkingSequence"]
script = ExtResource("7_6fsov")

[node name="Walk" type="Node" parent="NavigationSequence/MovementSelector/GroundSequence/GroundSelector/WalkingSequence"]
script = ExtResource("8_ecqlb")

[node name="SwimmingSequence" type="Node" parent="NavigationSequence/MovementSelector/GroundSequence/GroundSelector"]
script = ExtResource("2_a4ouu")

[node name="CheckIfSwimming" type="Node" parent="NavigationSequence/MovementSelector/GroundSequence/GroundSelector/SwimmingSequence"]
script = ExtResource("9_2u1we")

[node name="Swim" type="Node" parent="NavigationSequence/MovementSelector/GroundSequence/GroundSelector/SwimmingSequence"]
script = ExtResource("10_3744t")

[node name="AirSequence" type="Node" parent="NavigationSequence/MovementSelector"]
script = ExtResource("2_a4ouu")

[node name="CheckIfMovingOnAir" type="Node" parent="NavigationSequence/MovementSelector/AirSequence"]
script = ExtResource("11_64j4j")

[node name="Fly" type="Node" parent="NavigationSequence/MovementSelector/AirSequence"]
script = ExtResource("12_yyq6m")

[node name="Move" type="Node" parent="NavigationSequence"]
script = ExtResource("13_8b7lm")

[node name="CheckIfReachedTarget" type="Node" parent="NavigationSequence"]
script = ExtResource("14_xpql5")

[node name="Stop" type="Node" parent="NavigationSequence"]
script = ExtResource("15_l7lnx")
